fix: Adjust product card width on mobile screens to maintain style consistency

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -852,10 +852,6 @@ a.nav-link {
         font-size: medium;
         width: 80px;
     }
-    .home-card {
-    width: 100%;
-    margin-left: 0;
-    }
     .products-bg {
     margin-top: 200px;
     background-size: cover;
